# codecartographer

./: .gitignore  .gitmodules  Dockerfile_App  Dockerfile_Processor  Dockerfile_Web  README.md  docker-compose.debug.yml  docker-compose.yml  noxfile.py  package-lock.json  pyproject.toml  requirements.txt  requirements_app.txt  requirements_database.txt  requirements_processor.txt  requirements_web.txt
.claude/plans/: state-consolidation.md
.github/: CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md
.github/development/: FRONTEND_MODERNIZATION.md  README.md
.github/development/chrestromathy_branch/: README.md  frontend.html  pam_parser.py  parser.py  requirements.txt  server.py
.github/workflows/: actions.yml  adr-lint.yml  copilot-setup-steps.yml  main.yml  website.yml
codecarto/: .gitignore  LICENSE  README.md  __main__.py  cli.py  main.py  noxfile.py  pyproject.toml
codecarto/data/c_stubs/: dirent.h  fcntl.h  pthread.h  stddef.h  stdint.h  strings.h  unistd.h
codecarto/data/c_stubs/sys/: stat.h  time.h  types.h  wait.h
codecarto/data/lexicons/: c.yaml  python.yaml
codecarto/database/: database.py
codecarto/models/: demo_data.py  graph_data.py  source_data.py
codecarto/models/custom_layouts/: compound_layout.py
codecarto/notebooks/: gravis_vis.ipynb  notebook.py
codecarto/notebooks/dev/: directory_parse.ipynb  parse_test.ipynb  projectgraph.ipynb
codecarto/routers/: c_parser_router.py  lexicon_router.py  local_repo_router.py  palette_router.py  pam_router.py  parser_router.py  plotter_router.py  polygraph_router.py  repo_router.py  unified_parser_router.py
codecarto/services/: c_parser_service.py  cache_service.py  github_service.py  graph_serializer.py  lexicon_bridge.py  lexicon_service.py  local_repo_service.py  palette_service.py  parser_service.py  plotter_service.py  polygraph_service.py  position_service.py  unified_parser_service.py
codecarto/services/parsers/: __init__.py  c_language_parser.py  c_parser.py  language_parser.py  pam_parser.py  python_language_parser.py  regex_language_parser.py
codecarto/services/parsers/ASTs/: python_custom_ast.py
codecarto/services/parsers/python/: dependency_parser.py  directory_parser.py
codecarto/src/codecarto/: __main__.py  ast classes.txt  code_cartographer.py  code_parser.py  config.json  demo.py  errors.py  graph_plotter.py  palette.txt  parser.py  plotter.py  processor.py  test.py
codecarto/src/codecarto/cli/: __main__.py  cli.py
codecarto/src/codecarto/config/: config.py  default_config.json
codecarto/src/codecarto/json/: json_converter.py  json_graph.py  json_utils.py
codecarto/src/codecarto/palette/: default_palette.json  palette.py
codecarto/src/codecarto/themes/: theme_manager.py  themes.py
codecarto/src/codecarto/utils/: config.py  directories.py  dirs.py  utils.py
codecarto/src/codecarto/utils/directory/: config_dir.py  import_source_dir.py  output_dir.py  package_dir.py  palette_dir.py
codecarto/static/: c-visualizer.html
codecarto/tests/: test_json_graph.py  test_palette.py  test_parser.py  test_plotter.py  test_processor.py
codecarto/tests/test_source_code/: main.py  print.py  scramble.py
codecarto/util/: exceptions.py  threaded_feeder.py  utilities.py
data/: graphs.db
docs/: api.md  architecture.md  cli.md  contributing.md  getting-started.md  index.md  services.md
docs/.diagrams/: parser.puml  plotter.puml  plotter_client.puml  repo_client.puml  user_sequence.puml
docs/adr/: DRAFT-cache-service-vs-graphbase.md  DRAFT-code-map-navigation.md  DRAFT-compound-hierarchical-layout.md  DRAFT-d3-hierarchy-layout-improvements.md  DRAFT-github-token-resolution.md  DRAFT-golden-layout-primary-shell.md  DRAFT-graphbase-bookmark-integration.md  DRAFT-graphbase-submodule-interface-contract.md  DRAFT-panel-registry-and-add-window-menu.md  DRAFT-parser-cache-unification.md  README.md  TEMPLATE.md
docs/history/: MIGRATION_HISTORY.md
docs/llm/: 2026-07-21-full-review-cleanup-queue.md  ADDING_NEW_RENDERER.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  D3_EXTENSIONS_IMPLEMENTATION.md  EXTENDING.md  GRAVIS_PKG_RESOURCES_WARNING.md  LARGE_REPOS.md  RENDERER_FIX_SUMMARY.md  RENDERER_GUIDE.md  RENDERER_SYSTEM.md  UI_REFERENCE.md  repo_summary.md  uv_migration.md
docs/llm/archive/: CONTROL_PANEL_REORGANIZATION.md  TUTORIAL_FLOW.md
docs/llm/next_steps/: c_parser_phase3_compile_commands.md  lexicon.md  lexicon.py  parser_consolidation_and_scope_drift.md  test_lexicon.py
docs/llm/roadmap/: README.md  lexicon.md  topology-functionality-abstraction-maps.md
src/codecarto/: Dockerfile  README.md  __init__.py  api.py  codecarto.py  config.json  custom_layouts.py  errors.py  main.py  parser.py  plotter.py  processor.py  requirements.txt
src/codecarto/api/: __init__.py  main.py
src/codecarto/cli/: cli.py  progressbar.py
src/codecarto/config/: config.py  (+3 more)
src/web/: package-lock.json  vite.config.js
tests/: test_c_parser_router.py  test_c_parser_service.py  test_cache_service.py  test_cli_repo_graph.py  test_github_service.py  test_json_graph.py  test_language_parser.py  test_lexicon.py  test_lexicon_router.py  test_local_repo_service.py  test_palette.py  test_pam_parser.py  test_pam_router.py  test_parser.py  test_plotter.py  test_plotter_router.py  test_position_service.py  test_processor.py  test_repo_router.py  test_source_data.py  test_threaded_feeder.py  test_unified_parser_router.py  test_unified_parser_service.py
tests/test_cli/: remove_this.py  test_cli_dir.py  test_cli_help.py  test_cli_output.py  test_dir.py  test_help.py  test_output.py
tests/test_imports/: test_json_graph.py  test_palette.py  test_parser.py  test_plotter.py  test_processor.py
tests/test_lib/: test_lib_json_graph.py  test_lib_palette.py  test_lib_parser.py  test_lib_plotter.py  test_lib_processor.py
tests/test_reports/: add_link.js  codecarto.css  conftest.py  report.html
tests/test_source_code/: test_source_print.py
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
web/src/: appsettings.json  index.html  index.ts  router.ts  state.ts  utility.ts
(+506 files in other folders)
