[tool.poetry]
name = "codecarto"
version = "0.2.0"
homepage = "https://github.com/QuaternionMedia/codecarto"
description = "A tool used to analyze and graph source code."
authors = ['"Quaternion Media" <cameron@quaternionmedia.com>']
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
include = [
    { path = "docs/examples", format = "sdist" },
    { path = "tests", format = "sdist" },
]
 
[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
numpy = "^2.1.3"
matplotlib = "^3.7.1"
scipy = "^1.7.3"
importlib-metadata = "^5.2.0" 
fastapi = "^0.70.0"
python-multipart = ">=0.0.6"
mpld3 = "^0.5.5" 
gravis = "^0.1.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
pydantic = "^1.10.0"
requests = "^2.28.0"
httpx = "^0.24.0"
motor = "^3.1.1"
pytest-asyncio = "^0.20.0"
nbformat = "^5.8.0"
nbconvert = "^7.3.0" 

[tool.poetry.group.dev.dependencies]
nox = "^2022.11.21"
pytest = "^7.1.3"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.4.0"
pytest-profiling = "^1.7.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.11"
mkdocs-exclude = "^1.0.2"
python-dotenv = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Generate requirements.txt for Dockerfile
# poetry export -f requirements.txt --output requirements.txt --without-hashes
