[project]
name = "codecarto"
version = "0.3.0"
description = "A tool used to analyze and graph source code."
authors = [
    {name = "Quaternion Media", email = "cameron@quaternionmedia.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.0.0",
    "networkx>=3.1",
    "numpy>=2.1.3",
    "matplotlib>=3.7.1",
    "scipy>=1.7.3",
    "importlib-metadata>=5.2.0",
    "fastapi>=0.70.0",
    "python-multipart>=0.0.6",
    "mpld3>=0.5.5",
    "gravis>=0.1.0",
    "uvicorn[standard]>=0.22.0",
    "gunicorn>=20.1.0",
    "pydantic>=1.10.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "motor>=3.1.1",
    "pytest-asyncio>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2022.11.21",
    "pytest>=7.1.3",
    "pytest-cov>=2.12.1",
    "pytest-xdist>=2.4.0",
    "pytest-profiling>=1.7.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=9.0.11",
    "mkdocs-exclude>=1.0.2",
    "python-dotenv>=0.19.1",
]

[project.scripts]
codecarto = "codecarto.cli:cli"

[project.urls]
Homepage = "https://github.com/QuaternionMedia/codecarto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codecarto"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
